Fixes navigation z-index

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -12,7 +12,7 @@
   @include width-715 {
     display: flex;
     flex-direction: column;
-    margin-top: 50%;
+    margin-top: 10rem;
     padding: 0;
     position: static;
     width: 100%;
