--- a/src/styles/components/_intro-animation.scss
+++ b/src/styles/components/_intro-animation.scss
@@ -5,10 +5,10 @@
     left: 0;
     right: 0;
     bottom: 0;
-  transition: background-color 1s;
+  transition: all 1s;
   height: 100vh;
   width: 100vw;
-  z-index: 1;
+  z-index: 2;
 }
 
 .intro-animation {
